# rule-quarkus

./: .bazelrc  .gitignore  BAZEL_LIMITATIONS.md  BUILD.bazel  CLAUDE.md  IMPLEMENTATION_NOTES.md  MODULE.bazel  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  QUARKUS_MAVEN_BUILD.md  README.md  REFACTORING_PLAN.md  TODO.md  TROUBLESHOOTING.md
.claude/: settings.local.json
bazel/rules/: BUILD.bazel  jandex.bzl  quarkus.bzl  quarkus_application.bzl  quarkus_augment.bzl  quarkus_extension.bzl
bazel/rules/processors/: BUILD.bazel
bazel/toolchains/: BUILD.bazel
bazel/tools/: BUILD.bazel  BazelQuarkusAugmentor.java  JandexIndexer.java
bazel/tools/augmentor/: ArgumentParser.java  AugmentationContext.java
bazel/tools/discovery/: BeanDiscovery.java  DiscoveryResult.java  RouteDiscovery.java  RouteInfo.java
bazel/tools/generator/: GeneratedClass.java
bazel/tools/packager/: ManifestBuilder.java
bazel/tools/processor/: ApplicationModelBuilder.java  QuarkusAugmentorRunner.java
docs/: USAGE_GUIDE.md
examples/hello-world/: BUILD.bazel
examples/hello-world/src/main/java/com/example/: GreetingResource.java  QuarkusApp.java
examples/hello-world/src/main/resources/: application.properties
quarkus/: BUILD.bazel  defs.bzl  quarkus_app.bzl
v1-custom/: BUILD.bazel  README.md
v1-custom/examples/hello-world/: BUILD.bazel
v1-custom/examples/hello-world/src/main/java/com/example/: GreetingResource.java  GreetingService.java
v1-custom/examples/hello-world/src/main/resources/: application.properties
v1-custom/rules/: jandex.bzl  quarkus.bzl  quarkus_application.bzl  quarkus_augment.bzl  quarkus_extension.bzl
v1-custom/tools/: BUILD.bazel
v1-custom/tools/discovery/: BeanInfo.java
v1-custom/tools/generator/: MainClassGenerator.java
v1-custom/tools/indexer/: IndexBuilder.java
v1-custom/tools/packager/: JarPackager.java
v2-bootstrap/: BUILD.bazel  PLAN.md  README.md
v2-bootstrap/examples/demo-extensions/: BUILD.bazel
v2-bootstrap/examples/demo-extensions/src/main/java/com/example/health/: ApplicationHealthCheck.java  DatabaseHealthCheck.java
v2-bootstrap/examples/demo-extensions/src/main/java/com/example/model/: ApiResponse.java  User.java
v2-bootstrap/examples/demo-extensions/src/main/java/com/example/resource/: AiResource.java  DatabaseResource.java  IndexResource.java  MessagingResource.java  ObservabilityResource.java  UserResource.java
v2-bootstrap/examples/demo-extensions/src/main/resources/: application.properties
v2-bootstrap/examples/hello-world/: BUILD.bazel
v2-bootstrap/examples/hello-world/src/main/java/com/example/: GreetingResource.java  GreetingService.java  Main.java
v2-bootstrap/examples/hello-world/src/main/resources/: application.properties
v2-bootstrap/rules/: BUILD.bazel  quarkus.bzl  quarkus_bootstrap.bzl
v2-bootstrap/tools/: BUILD.bazel
v2-bootstrap/tools/src/main/java/io/quarkus/bazel/bootstrap/: ApplicationModelFactory.java  AugmentationConfig.java  BootstrapAugmentor.java  ConfigParser.java  DependencyMapper.java  ExtensionDetector.java  ExtensionInfo.java  OutputHandler.java
