"""
Quarkus Bazel Rules
"""

# Export all .bzl files for use in other BUILD files
exports_files([
    "quarkus.bzl",
    "quarkus_application.bzl",
    "quarkus_extension.bzl",
    "jandex.bzl",
])

filegroup(
    name = "all_files",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)
