"""
Quarkus Build Tools

These are helper tools used by Quarkus Bazel rules for:
- Jandex indexing
- Application augmentation
- Extension metadata generation
"""

load("@rules_java//java:defs.bzl", "java_binary")

# Jandex indexer tool
# TODO: Implement actual Jandex wrapper
java_binary(
    name = "jandex",
    srcs = ["JandexIndexer.java"],
    main_class = "io.quarkus.bazel.tools.JandexIndexer",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_smallrye_jandex",
    ],
)

# Quarkus augmentor tool
# Wraps io.quarkus.deployment.QuarkusAugmentor for Bazel builds
java_binary(
    name = "quarkus_augmentor",
    srcs = [
        "BazelQuarkusAugmentor.java",
        "augmentor/AugmentationContext.java",
        "augmentor/ArgumentParser.java",
        "discovery/DiscoveryResult.java",
        "discovery/RouteDiscovery.java",
        "discovery/RouteInfo.java",
        "generator/GeneratedClass.java",
        "generator/MainClassGenerator.java",
        "indexer/IndexBuilder.java",
        "packager/JarPackager.java",
        "packager/ManifestBuilder.java",
    ],
    main_class = "io.quarkus.bazel.tools.BazelQuarkusAugmentor",
    visibility = ["//visibility:public"],
    deps = [
        # Jandex for bytecode indexing
        "@maven//:io_smallrye_jandex",

        # Gizmo for bytecode generation
        "@maven//:io_quarkus_gizmo_gizmo",

        # Logging
        "@maven//:org_jboss_logging_jboss_logging",
    ],
)
