load("//quarkus:defs.bzl", "quarkus_app")

quarkus_app(
    name = "hello-world",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:io_quarkus_quarkus_rest",
        "@maven//:io_quarkus_quarkus_rest_jackson",
        "@maven//:io_quarkus_quarkus_vertx_http",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_web",
        "@maven//:jakarta_ws_rs_jakarta_ws_rs_api",
    ],
    main_class = "com.example.QuarkusApp",
    jvm_flags = [
        "-Xmx512m",
    ],
)
