load("//bazel/rules:quarkus.bzl", "quarkus_application")

quarkus_application(
    name = "hello-world",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_web",
        "@maven//:jakarta_enterprise_jakarta_enterprise_cdi_api",
        "@maven//:jakarta_inject_jakarta_inject_api",
        "@maven//:jakarta_ws_rs_jakarta_ws_rs_api",
        "@maven//:org_jboss_logging_jboss_logging",
    ],
    extensions = [
        "@maven//:io_quarkus_quarkus_arc",
        "@maven//:io_quarkus_arc_arc",
    ],
    deployment_extensions = [
        "@maven//:io_quarkus_arc_arc_processor",
    ],
    main_class = "com.example.QuarkusApp",
    jvm_flags = [
        "-Xmx512m",
    ],
)
