"""
Quarkus Bootstrap Tools (Approach 2)

Build tools for running Quarkus augmentation using QuarkusBootstrap API.
"""

load("@rules_java//java:defs.bzl", "java_binary", "java_library")

# Main augmentor tool
java_binary(
    name = "bootstrap_augmentor",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.quarkus.bazel.bootstrap.BootstrapAugmentor",
    visibility = ["//visibility:public"],
    deps = [
        # Quarkus Bootstrap Core
        "@maven//:io_quarkus_quarkus_bootstrap_core",
        "@maven//:io_quarkus_quarkus_bootstrap_app_model",

        # Quarkus Core
        "@maven//:io_quarkus_quarkus_core",

        # Logging
        "@maven//:org_jboss_logging_jboss_logging",

        # ArC runtime (needed for ASM class loading during augmentation)
        "@maven//:io_quarkus_arc_arc",

        # Core deployment (contains AugmentActionImpl)
        "@maven//:io_quarkus_quarkus_core_deployment",

        # ArC deployment (for build steps)
        "@maven//:io_quarkus_quarkus_arc_deployment",
    ],
)

# Library for use by other tools
java_library(
    name = "bootstrap_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_quarkus_quarkus_bootstrap_core",
        "@maven//:io_quarkus_quarkus_bootstrap_app_model",
        "@maven//:io_quarkus_quarkus_core",
        "@maven//:org_jboss_logging_jboss_logging",
    ],
)
