"""
Quarkus Annotation Processors

This package defines Java annotation processors required for Quarkus applications.
These processors run at compile-time to generate CDI beans, configuration, and other
build-time artifacts.
"""

load("@rules_java//java:defs.bzl", "java_plugin")

# ARC (CDI) Annotation Processor
# Generates CDI bean metadata and proxy classes
java_plugin(
    name = "arc_processor",
    processor_class = "io.quarkus.arc.processor.BeanProcessor",
    deps = [
        "@maven//:io_quarkus_arc_arc_processor",
        "@maven//:io_quarkus_arc_arc",
        "@maven//:jakarta_enterprise_jakarta_enterprise_cdi_api",
        "@maven//:io_smallrye_jandex",
        "@maven//:io_quarkus_gizmo_gizmo",
        "@maven//:org_jboss_logging_jboss_logging",
    ],
    visibility = ["//visibility:public"],
)

# Quarkus Extension Processor
# Processes Quarkus extension metadata and configuration
java_plugin(
    name = "extension_processor",
    processor_class = "io.quarkus.extension.processor.ExtensionAnnotationProcessor",
    deps = [
        "@maven//:io_quarkus_quarkus_extension_processor",
        "@maven//:io_quarkus_quarkus_core",
    ],
    visibility = ["//visibility:public"],
)

# Combined processor set for convenience
# Use this in most Quarkus applications
java_plugin(
    name = "quarkus_processors",
    processor_class = "io.quarkus.arc.processor.BeanProcessor",
    deps = [
        "@maven//:io_quarkus_arc_arc_processor",
        "@maven//:io_quarkus_arc_arc",
        "@maven//:io_quarkus_quarkus_extension_processor",
        "@maven//:io_quarkus_quarkus_core",
        "@maven//:jakarta_enterprise_jakarta_enterprise_cdi_api",
        "@maven//:io_smallrye_jandex",
        "@maven//:io_quarkus_gizmo_gizmo",
        "@maven//:org_jboss_logging_jboss_logging",
    ],
    generates_api = True,
    visibility = ["//visibility:public"],
)
